Added maven repos, refactored build files and added CI/CD