@@ -1,6 +1,5 @@
 plugins {
     id("com.gradleup.shadow") version "9.4.2"
-    id("java")
     id("xyz.jpenilla.run-paper") version "3.0.2"
 }
 
@@ -9,36 +8,42 @@ dependencies {
 
     compileOnly("io.papermc.paper:paper-api:26.1.2.build.+")
     compileOnly("me.clip:placeholderapi:2.11.6")
-    implementation("io.github.toxicity188:bettermodel-api:3.1.0")
-    implementation("io.github.toxicity188:bettermodel-bukkit-api:3.1.0")
     compileOnly("net.strokkur.commands:annotations-paper:2.1.1")
     annotationProcessor("net.strokkur.commands:processor-paper:2.1.1")
-
     implementation("com.zaxxer:HikariCP:6.2.1")
-    //implementation("org.slf4j:slf4j-jdk14:2.0.16")
+    implementation("io.github.toxicity188:bettermodel-api:3.1.0")
+    implementation("io.github.toxicity188:bettermodel-bukkit-api:3.1.0")
 }
 
-tasks.shadowJar {
-    configurations = project.configurations.runtimeClasspath.map { setOf(it) }
-    archiveClassifier.set("")
-    relocate("com.zaxxer.hikari", "net.chamosmp.chamoitemskins.libs.hikari")
-}
 
-tasks.build {
-    dependsOn(tasks.shadowJar)
-}
-
-tasks.processResources {
-    val props = mapOf("version" to project.version)
-    inputs.properties(props)
-    filteringCharset = "UTF-8"
-
-    filesMatching("plugin.yml") {
-        expand(props)
-    }
-}
 
 tasks {
+    // shadoJar configuration
+    shadowJar {
+        configurations = project.configurations.runtimeClasspath.map { setOf(it) }
+        archiveClassifier.set("")
+        relocate("com.zaxxer.hikari", "net.chamosmp.chamoitemskins.libs.hikari")
+    }
+
+    // We want all jars to produce shadowed ones
+    build {
+        dependsOn(shadowJar)
+    }
+
+    // Enables the ${version} JSON placeholder to plugin.yml
+    processResources {
+        val props = mapOf("version" to project.version)
+        inputs.properties(props)
+        filteringCharset = "UTF-8"
+
+        filesMatching("plugin.yml") {
+            expand(props)
+        }
+    }
+
+
+
+    // runServer, by my boii JPenilla
     runServer {
         downloadPlugins {
             github("toxicity188", "BetterModel", "3.1.0", "bettermodel-3.1.0-paper.jar")
@@ -47,9 +52,6 @@ tasks {
 
         minecraftVersion("26.1.2")
     }
+    // runFolia
     runPaper.folia.registerTask()
-}
-
-tasks.compileJava {
-    options.compilerArgs.addAll(listOf("-Xlint:-unchecked", "-Xlint:-rawtypes", "-proc:full"))
 }
